...
                            <rect key="frame" x="32" y="106" width="304" height="30"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="onboarding.loginView.username.textfield"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
...
                            <rect key="frame" x="32" y="144" width="304" height="30"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="onboarding.loginView.password.textfield"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="go" secureTextEntry="YES"/>
...
                            <rect key="frame" x="59" y="182" width="255" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="onboarding.loginView.login.button"/>
                            <state key="normal" title="Login">
                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <rect key="frame" x="59" y="215" width="255" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="onboarding.loginView.forgotPassword.button"/>
                            <state key="normal" title="Forgot password?">
                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <rect key="frame" x="32" y="187" width="267" height="30"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="onboarding.configureView.mobileNumber.textfield"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="phonePad" returnKeyType="send"/>
...
                            <rect key="frame" x="58" y="320" width="255" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="onboarding.configureView.continue.button"/>
                            <state key="normal" title="Continue">
                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <rect key="frame" x="38" y="175" width="297" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="onboarding.forgotPasswordView.email.button"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress"/>
...
                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0U0-85-hbF" userLabel="Close Button">
                    <rect key="frame" x="20" y="50" width="22" height="22"/>
                    <accessibility key="accessibilityConfiguration" identifier="onboarding.close.button"/>
                    <constraints>
                        <constraint firstAttribute="width" secondItem="0U0-85-hbF" secondAttribute="height" multiplier="1:1" id="gmQ-5S-hcM"/>
...
