...
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W52-sh-hzy">
                                                        <rect key="frame" x="0.0" y="0.0" width="70.333333333333329" height="70.333333333333329"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </view>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ne-ge-4iz" userLabel="call-button">
                                                        <rect key="frame" x="95.333333333333314" y="0.0" width="70.666666666666686" height="70.333333333333329"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="SIPCallingStoryboard.HangupButton"/>
                                                        <state key="normal" image="declineButton">
                                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <state key="disabled" image="declineButtonDisabled"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="buttonImage" value="CallButtonHangup"/>
                                                        </userDefinedRuntimeAttributes>
...
