...
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cBR-eb-ZZS">
                                                        <rect key="frame" x="0.0" y="0.0" width="79.5" height="79"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </view>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fQq-Gl-ZNQ">
                                                        <rect key="frame" x="104.5" y="0.0" width="79" height="79"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="DialerStoryboard.CallButton"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="34"/>
                                                        <state key="normal" backgroundImage="acceptButton">
                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <state key="disabled" image="acceptButton"/>
...
